<resources>
    <string name="app_name">Screen Recorder Edge</string>
    <string name="description_edge_single_plus">Simple screen recorder for edge panel</string>
    <string name="description_button_rec">Button Start/Stop Recording</string>
    <string name="key_record_mic" translatable="false">key_record_mic</string>
    <string name="summary_record_mic">Record external audio using the microphone</string>
    <string name="url_rate" translatable="false">https://play.google.com/store/apps/details?id=a98apps.recorderedge</string>
    <string name="title_video_quality">Video Quality</string>
    <string name="key_video_quality" translatable="false">key_video_quality</string>
    <string name="key_recording_notification" translatable="false">key_recording_notification</string>
    <string name="summary_recording_notification">Manage notifications while recording or when finished</string>
    <string name="title_recording_notification">Show Notifications</string>
    <string name="title_finish_action">Action on Finish</string>
    <string name="key_finish_action" translatable="false">key_finish_action</string>
    <string name="description_image">Preview Image of Video</string>
    <string name="started" translatable="false">started</string>
    <string name="key_version" translatable="false">key_version</string>
    <string name="title_audio_quality">Audio Quality</string>
    <string name="key_audio_quality" translatable="false">key_audio_quality</string>
    <string name="title_video_orientation">Video Orientation</string>
    <string name="key_video_orientation" translatable="false">key_video_orientation</string>
    <string name="title_video_resolution">Video Resolution</string>
    <string name="key_audio_channel" translatable="false">key_audio_channel</string>
    <string name="title_audio_channel">Audio Channel</string>
    <string name="description_list_videos">Button List Videos</string>
    <string name="description_button_settings">Button Open Settings</string>
    <string name="title_rate_app">" Rate us"</string>
    <string name="title_record_mic">Record Microphone</string>
    <string name="file_not_exist">The file not exist!</string>
    <string name="error_on_delete">Error on delete</string>
    <string name="deleted_successfully">Deleted successfully!</string>
    <string name="share_with">Share with…</string>
    <string name="notification_finish_disabled">Notification finish are disabled</string>
    <string name="notifications_are_disabled">Notifications are disabled</string>
    <string name="give_overlay_permission">Give overlay permission to show pop-up!</string>
    <string name="video_recorded">Video Recorded</string>
    <string name="what_you_do">What do you want to do?</string>
    <string name="text_watch_caps">WATCH</string>
    <string name="text_share_caps">SHARE</string>
    <string name="text_delete_caps">DELETE</string>
    <string name="text_watch">Watch</string>
    <string name="text_share">Share</string>
    <string name="text_delete">Delete</string>
    <string name="recording_finished">Recording Finished</string>
    <string name="failed_get_external_storage">Failed to get storage free space</string>
    <string name="failed_create_directory">Failed to create recording directory</string>
    <string name="stopped_file_limit_memory">Recording stopped, file size limit reached</string>
    <string name="little_memory_available">Little memory available</string>
    <string name="failed_prepare_recorder">"Message: An error occurred while starting the recording, please send us a report so we can identify the problem and resolve it as soon as possible.\nError: Failed to prepare the recorder\nLog Message: "</string>
    <string name="text_stop">Stop</string>
    <string name="text_recording">Recording</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="write_permission_needed">Write permission is needed to save recorded file</string>
    <string name="microphone_permission_needed">Record Audio permission is needed to use microphone</string>
    <string name="text_size">"Size: "</string>
    <string name="text_duration">Duration:</string>
    <string name="text_resolution">Resolution:</string>
    <string name="text_unknown">Unknown</string>
    <string name="record_notification">Record Notification</string>
    <string name="finish_notification">Finish Notification</string>
    <string name="description_notification_finish">Displays a notification on record finish</string>
    <string name="description_notification_recording">Displays a notification while recording</string>
    <string name="title_settings_activity">"  Settings"</string>
    <string name="category_notifications">Notifications</string>
    <string name="category_app">App</string>
    <string name="text_version">"Version "</string>
    <string name="category_audio">Audio</string>
    <string name="category_video">Video</string>
    <string name="key_hide_icon" translatable="false">key_hide_icon</string>
    <string name="summary_hide_icon">Hide the application of launcher</string>
    <string name="title_hide_icon">Hide Application</string>
    <string name="text_hiding">Hiding, it may take a while</string>
    <string name="text_enabling">Enabling, it may take a while</string>
    <string name="enable_the_panel">Enable the panel</string>
    <string name="key_video_encoder" translatable="false">key_video_encoder</string>
    <string name="title_video_encoder">Video Encoder</string>
    <string name="key_hevc_resolution" translatable="false">key_hevc_resolution</string>
    <string name="key_mpeg_resolution" translatable="false">key_mpeg_resolution</string>
    <string name="key_category_video" translatable="false">key_category_video</string>
    <string name="title_report_bug">Report Bug</string>
    <string name="summary_report_bug">Please email us with details</string>
    <string name="key_report_bug" translatable="false">key_report_bug</string>
    <string name="please_write_details">Please write in detail what is the problem</string>
    <string name="dont_remove_information_text">Please don\'t remove this information</string>
    <string name="send_email">Send email with…</string>
    <string name="report_bug_error">Couldn\'t find an email app or account</string>
    <string name="text_recording_started">Recording Started</string>
    <string name="tap_to_dismiss">\nTap here to dismiss the notification</string>
    <string name="text_enable_panel">ENABLE</string>
    <string name="title_audio_source">Audio Source</string>
    <string name="key_audio_source" translatable="false">key_audio_source</string>
    <string name="failed_report_message">"Message: An error occurred, please send us a report so we can identify the problem and resolve it as soon as possible.\nLog Message: "</string>
    <string name="failed_report_message_encoder">"Message: An error has occurred, we suggest you to change the video encoder in the settings and restart the device. If the problem still persists, please send us a report to identify the problem and resolve it as soon as possible.\nLog Message: "</string>
    <string name="text_send">Send</string>
    <string name="key_record_path" translatable="false">key_record_path</string>
    <string name="title_record_path">Storage Location</string>
    <string name="text_storage">Storage</string>
    <string name="title_file_format">File Format</string>
    <string name="key_file_format" translatable="false">key_file_format</string>
    <string name="key_audio_encoder" translatable="false">key_audio_encoder</string>
    <string name="title_audio_encoder">Audio Encoder</string>
    <string name="key_reset_config" translatable="false">key_reset_config</string>
    <string name="summary_reset_settings">Reset the settings to default</string>
    <string name="title_reset_settings">Reset Settings</string>
    <string name="text_settings_reseted">Settings Reseted!</string>
    <string name="text_failed_create_file">Failed to create file recording</string>
    <string name="error_read_file">Error on read record file</string>
    <string name="permission_storage_needed">Permission is required to read and write the recording file!</string>
    <string name="failed_get_storage">Failed to get storage</string>
    <string name="failed_grant_permission">Failed to grant permission</string>
    <string name="message_path_not_found">The storage path not exist or the external storage is not accessible or has been deleted, please, select other path to save the recorded files.</string>
    <string name="summary_info_encoder_h264"><b>H264</b> is the encoder that can record in high definition and full screen, however if you record the video using this encoder and the video does not present any image, we suggest using another encoder.</string>
    <string name="summary_info_encoder_mpeg4"><b>MPEG4</b> is the most limited encoder in resolution, supports 360p up to 900p resolution in full screen and 960p in 2:1 and 1080p in 16:9 (not full screen). Your device may not be able to use this encoder. See more information in the Others>Snapdragon Devices tab.</string>
    <string name="summary_info_encoder_hevc"><b>HEVC</b> is the more efficient encoder and recommended if you want to save more space, but you may not be able to play HEVC videos on other devices or share them online.</string>
    <string name="failed_get_log">Failed to get log</string>
    <string name="text_panel">Panel</string>
    <string name="warning_mic_while_recording">You cannot use this while recording</string>
    <string name="message_runtime_exception">"Message: No valid audio/video data has been received, we suggest restarting the phone and trying again. If the problem persists, please send us a report so we can identify the problem and resolve it as soon as possible.\nLog Message: "</string>
    <string name="failed_record_using_microphone">"Message: Unable to start recording using microphone, may be in use by another application. Try to start recording with the microphone disabled."</string>
    <string name="text_help_area_cocktail">" Help"</string>
    <string name="description_divider">Its a divider</string>
    <string name="title_videos_padding" translatable="false">" Videos"</string>
    <string name="text_donate">" Support"</string>
    <string name="text_supports_me">"Supports me "</string>
    <string name="text_thanks_for_support">Thank very much for support me!</string>
    <string name="text_thank_you">Thank you!</string>
    <string name="title_mic_on">" MIC: ON"</string>
    <string name="title_mic_off">" MIC: OFF"</string>
    <string name="key_panel_color" translatable="false">key_panel_color</string>
    <string name="summary_color_panel">Change the color of panel</string>
    <string name="title_panel_color">Panel Color</string>
    <string name="key_list_icon_color" translatable="false">key_list_icon_color</string>
    <string name="summary_color_list">Change the color of list videos icon</string>
    <string name="title_list_color">Videos Color</string>
    <string name="key_settings_icon_color" translatable="false">key_settings_icon_color</string>
    <string name="summary_color_settings">Change the color of settings icon</string>
    <string name="title_settings_color">Settings Color</string>
    <string name="key_button_rec_theme" translatable="false">key_button_rec_theme</string>
    <string name="summary_button_rec_color">Change the theme of button rec/stop</string>
    <string name="title_record_theme">Button Theme</string>
    <string name="title_app_theme">App Theme</string>
    <string name="key_app_theme" translatable="false">key_app_theme</string>
    <string name="summary_theme_app">Change the theme of app</string>
</resources>