<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/category_notifications">

        <Preference
            android:key="@string/key_recording_notification"
            android:summary="@string/summary_recording_notification"
            android:title="@string/title_recording_notification" />

        <ListPreference
            android:defaultValue="2"
            android:dialogTitle="@string/title_finish_action"
            android:entries="@array/pref_finish_action_entries"
            android:entryValues="@array/pref_finish_action_values"
            android:key="@string/key_finish_action"
            android:title="@string/title_finish_action" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="@string/key_category_video"
        android:title="@string/category_video">

        <ListPreference
            android:defaultValue="5"
            android:dialogTitle="@string/title_video_encoder"
            android:entries="@array/pref_video_encoder_entries"
            android:entryValues="@array/pref_video_encoder_values"
            android:key="@string/key_video_encoder"
            android:title="@string/title_video_encoder" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/title_video_quality"
            android:entries="@array/pref_video_quality_entries"
            android:entryValues="@array/pref_video_quality_values"
            android:key="@string/key_video_quality"
            android:title="@string/title_video_quality" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/title_video_resolution"
            android:entries="@array/pref_hevc_resolution_entries"
            android:entryValues="@array/pref_hevc_resolution_values"
            android:key="@string/key_hevc_resolution"
            android:title="@string/title_video_resolution" />

        <ListPreference
            android:defaultValue="720"
            android:dialogTitle="@string/title_video_resolution"
            android:entries="@array/pref_mpeg4_resolution_entries"
            android:entryValues="@array/pref_mpeg4_resolution_values"
            android:key="@string/key_mpeg_resolution"
            android:title="@string/title_video_resolution" />

        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/title_video_orientation"
            android:entries="@array/pref_video_orientation_entries"
            android:entryValues="@array/pref_video_orientation_values"
            android:key="@string/key_video_orientation"
            android:title="@string/title_video_orientation" />

        <Preference
            android:selectable="false"
            android:summary="@string/summary_info_encoder_h264" />

        <Preference
            android:selectable="false"
            android:summary="@string/summary_info_encoder_mpeg4" />

        <Preference
            android:selectable="false"
            android:summary="@string/summary_info_encoder_hevc" />

        <Preference
            android:selectable="false"
            android:summary="@string/summary_info_fps" />

        <Preference
            android:selectable="false"
            android:summary="@string/summary_info_size" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_audio" android:key="@string/key_category_audio">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_record_mic"
            android:summary="@string/summary_record_mic"
            android:title="@string/title_record_mic" />

        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/title_audio_encoder"
            android:entries="@array/pref_audio_encoder_entries"
            android:entryValues="@array/pref_audio_encoder_values"
            android:key="@string/key_audio_encoder"
            android:title="@string/title_audio_encoder" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/title_audio_source"
            android:entries="@array/pref_audio_source_entries"
            android:entryValues="@array/pref_audio_source_values"
            android:key="@string/key_audio_source"
            android:title="@string/title_audio_source" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/title_audio_quality"
            android:entries="@array/pref_audio_quality_entries"
            android:entryValues="@array/pref_audio_quality_values"
            android:key="@string/key_audio_quality"
            android:title="@string/title_audio_quality" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/title_audio_channel"
            android:entries="@array/pref_audio_channel_entries"
            android:entryValues="@array/pref_audio_channel_values"
            android:key="@string/key_audio_channel"
            android:title="@string/title_audio_channel" />

        <Preference
            android:selectable="false"
            android:summary="@string/summary_info_audio" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/text_storage">

        <Preference
            android:key="@string/key_record_path"
            android:title="@string/title_record_path" />

        <ListPreference
            android:defaultValue="yyyyddMM_HHmmss"
            android:dialogTitle="@string/title_file_format"
            android:entries="@array/pref_file_format_array_entries"
            android:entryValues="@array/pref_file_format_array_values"
            android:key="@string/key_file_format"
            android:title="@string/title_file_format" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/text_panel">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_show_mic"
            android:summary="@string/summary_show_mic"
            android:title="@string/title_show_mic" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_show_videos"
            android:summary="@string/summary_show_videos"
            android:title="@string/title_show_videos" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_other">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_hide_icon"
            android:summary="@string/summary_hide_icon"
            android:title="@string/title_hide_icon" />

        <Preference
            android:key="@string/key_reset_config"
            android:summary="@string/summary_reset_settings"
            android:title="@string/title_reset_settings" />

        <Preference
            android:key="@string/key_report_bug"
            android:summary="@string/summary_report_bug"
            android:title="@string/title_report_bug" />

        <Preference
            android:summary="@string/summary_rate_app"
            android:title="@string/title_rate_app">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/url_rate" />
        </Preference>

        <Preference
            android:key="@string/key_version"
            android:title="@string/text_version" />

    </PreferenceCategory>
</PreferenceScreen>