<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/panel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundCocktailDefault"
    android:importantForAccessibility="2"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/button_rec"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/description_button_rec"
        android:src="@mipmap/ic_button_rec" />

    <ImageView
        android:id="@+id/button_list"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_below="@id/button_rec"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/description_list_videos"
        android:src="@drawable/ic_list" />

    <ImageView
        android:id="@+id/button_settings"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:layout_below="@id/button_list"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/description_button_settings"
        android:src="@drawable/ic_settings" />

</RelativeLayout>